fix table header wrapping

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -45,6 +45,10 @@ kbd {
   min-width: unset;
 }
 
+.table-container th {
+  white-space: nowrap;
+}
+
 .popover-inner a,
 article a,
 article a.internal {
